Fix strange wrapping of day-of-week buttons.
Previously worked in Firefox but not Chrome/Windows.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1325,6 +1325,8 @@ body.trips #page-header h1 {
 
 body.trips #weekday_select {
   float: left;
+  white-space: nowrap;
+  width: 500px; /* Wide enough for all 7 buttons without wrapping. */
 }
 
 body.trips #weekday_select p {
